--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
+    "angular-count-to": "0.0.3",
     "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.1",
