--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
-    "@angular/fire": "^5.0.2",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
@@ -24,9 +24,11 @@
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
     "angular-count-to": "0.0.3",
-    "angularfire2": "^5.0.2",
+    "angularfire2": "^5.1.0",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
-    "firebase": "^5.5.1",
+    "firebase": "^5.5.7",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
